    Lifetimes, Water Orientational Relaxation, Angular Distribution, Mean Square 
    Displacement and Survival Probability. Documentation and test are included.
  * RMSF class added to rms analysis module
  * ProgressMeter now outputs every *interval* number of ``update`` calls
  * Created lib.mdamath for common mathematical functions.

  Changes
  * A ProtoReader class intermediate between IObase and Reader was added so
    specific Readers can be subclassed without __del__ (the ChainReader and
    SingleFrameReader), thus preventing memleaks (Issue #312).
  * Atoms (and all container classes thereof) are now bound to Universes
    only via weakrefs. If Universes are not explicitly kept in scope Atoms
    will become orphaned.
  * Timestep can now only init using an integer argument (which
    represents the number of atoms)
  * Added from_timestep and from_coordinates construction methods
    to base.Timestep
  * Removed FormatError, now replaced by ValueError
  * distances.contact_matrix(): changed keyword 'suppress_progmet' to
    'quiet'
  * Moved MDAnalysis.KDTree to MDAnalysis.lib.KDTree (Issue #287)
  * Moved MDAnalysis.core.transformations to MDAnalysis.lib.transformations
    (Issue #287)
  * Moved MDAnalysis.core.util to MDAnalysis.lib.util (Issue #287)
  * Moved MDAnalysis.core.log to MDAnalysis.lib.log (Issue #287)
  * Moved MDAnalysis.core.units to MDAnalysis.units (Issue #287)
  * Moved MDAnalysis.core.distances to MDAnalysis.lib.distances (Issue #287)
  * Moved MDAnalysis.core.parallel to MDAnalysis.lib.parallel (Issue #287)
  * base.Reader now defines __iter__
  * __iter__ removed from many Readers (now use base.Reader implementation)
  * numpy >= 1.5 required

  Fixes
  * ChainReaders no longer leak (Issue #312)
  * analysis.hbonds.HydrogenBondAnalysis performs a sanity check for
    static selections (Issue #296)
  * Fixed TRZWriter failing when passed a non TRZTimestep (Issue #302)
  * relative imports are now banned in unit testing modules